--- a/index.html
+++ b/index.html
@@ -205,6 +205,68 @@
     </section>
 
     <div class="container">
+        <h2 class="text-center mb-5">Project</h2>
+        <div class="card mb-2 shadow">
+            <div class="row">
+                <div class="col-3">
+                    <div class="card" style="height: 200px;">
+                        <img src="img/RevoU_software_developer.png" class="my-auto" alt="" srcset="">
+                    </div>
+                </div>
+                <div class="col-9">
+                    <h4 class="mt-3">RevoU - Vending Machine Sales Website Dashboard  (Apr 2024 - Mei 2024)</h4>
+                    <p class="desc">Project ini adalah Project Capstone yang saya dan teman teman saya kerjakan selama mengikuti Studi Independen Batch 6 oleh RevoU Tech Academy. Adapun teknologi yang digunakan dalam Project Capstone ini ialah dengan menggunakan <b>HTML</b>, <b>CSS</b>, <b>Javascript (JQuery, AJAX (Fetch))</b>.</p>
+                    <p class="desc">Fitur yang tersedia antara lain:</p>
+                    <ul>
+                        <li><b>Dropdown Filtering</b>, dimana setiap kita memilih item di dalam Dropdown, maka visualisasi akan otomatis terupdate</li>
+                        <li><b>Visualisasi (Chart Js)</b>, terdapat beberapa visualisasi yang tersedia dan dipakai untuk menganalisis hubungan yang terjadi antar kolom</li>
+                        <li><b>DataTable</b>, hal ini digunakan sebagai tempat untuk melihat persebaran barang di masing masing lokasi serta jumlah barang terkait dalam setiap lokasi.</li>
+                    </ul>
+                    <b class="desc">Acuan link: </b><a href="https://km-feb24-surabaya-03.vercel.app/">RevoU - Vending Machine Sales Website Dashboard</a>
+                </div>
+            </div>
+        </div>
+        <div class="card mb-2 shadow">
+            <div class="row">
+                <div class="col-3">
+                    <div class="card" style="height: 200px;">
+                        <img src="img/looker_studio.png" class="my-auto" alt="" srcset="">
+                    </div>
+                </div>
+                <div class="col-9">
+                    <h4 class="mt-3">RevoU - Vending Machine Sales Looker Studio Dashboard (Mar 2024)</h4>
+                    <p class="desc">Project ini adalah Project Capstone yang saya dan teman teman saya kerjakan selama mengikuti Studi Independen Batch 6 oleh RevoU Tech Academy. Adapun teknologi yang digunakan dalam Project Capstone ini ialah dengan menggunakan <b>Looker Studio</b>, <b>Big Query</b>, <b>Data (CSV)</b>.</p>
+                    <p class="desc">Fitur yang tersedia antara lain:</p>
+                    <ul>
+                        <li><b>Dropdown Filtering</b>, dimana setiap kita memilih item di dalam Dropdown, maka visualisasi akan otomatis terupdate</li>
+                        <li><b>Visualisasi</b>, terdapat beberapa visualisasi yang tersedia dan dipakai untuk menganalisis hubungan yang terjadi antar kolom</li>
+                    </ul>
+                    <b class="desc">Acuan link: </b><a href="https://lookerstudio.google.com/reporting/a3973641-027e-4819-8b16-26ecbae6351b/page/46IyD">RevoU - Vending Machine Sales Looker Studio Dashboard</a>
+                </div>
+            </div>
+        </div>
+        <div class="card mb-2 shadow">
+            <div class="row">
+                <div class="col-3">
+                    <div class="card" style="height: 200px;">
+                        <img src="img/uiux_kmiexpo.png" class="my-auto" alt="" srcset="">
+                    </div>
+                </div>
+                <div class="col-9">
+                    <h4 class="mt-3">KMI Expo 2023 - UI / UX Ruang Kedinasan (Ags 2023)</h4>
+                    <p class="desc">Ini adalah proect UI/UX yang saya lakukan sebagai anggota kelompok peserta KMI Expo 2023. Adapun teknologi yang digunakan dalam Project ini ialah dengan menggunakan <b>Figma</b>.</p>
+                    <p class="desc">Fitur yang tersedia antara lain:</p>
+                    <ul>
+                        <li><b>Dropdown Filtering</b>, dimana setiap kita memilih item di dalam Dropdown, maka visualisasi akan otomatis terupdate</li>
+                        <li><b>Visualisasi</b>, terdapat beberapa visualisasi yang tersedia dan dipakai untuk menganalisis hubungan yang terjadi antar kolom</li>
+                    </ul>
+                    <b class="desc">Acuan link: </b><a href="https://www.figma.com/design/eiC2Ctj4j7IjGo1Dn2U1x8/Untitled?node-id=0-1&t=902wyyZoopHPViay-1">KMI Expo 2023 - UI / UX Ruang Kedinasan</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
         <div class="row">
             <h2 class="text-center">Experience</h2>
             <div class="col-6">
