--- a/index2.html
+++ b/index2.html
@@ -144,6 +144,7 @@
     <h2>About Me</h2>
     <p class="lead">I'm a front-end developer with a passion for creating beautiful and functional websites. With a background in both design and development, I have a unique understanding of how to create a seamless user experience.</p>
   </section>
+  <a href=""></a>
 
   <!-- Projects Section -->
   <section id="projects" class="container my-5">
